force-app/main/default/objects/Condition_Set__c/Condition_Set__c.object-meta.xml
<CustomObject>
    <label>Condition Set</label>
    <nameField>
        <label>Condition Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condition Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>