force-app/main/default/objects/Condition_Set__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <referenceTo>Action__c</referenceTo>
    <relationshipLabel>Action</relationshipLabel>
    <relationshipName>Action</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>