force-app/main/default/objects/Condition_Set__c/fields/Logical_Statement__c.field-meta.xml
<CustomField>
    <fullName>Logical_Statement__c</fullName>
    <label>Logical Statement</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>