force-app/main/default/objects/Condition_Set__c/fields/RPN_Logic__c.field-meta.xml
<CustomField>
    <fullName>RPN_Logic__c</fullName>
    <label>RPN Logic</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>